--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
@@ -15,35 +16,52 @@
         <nav>
             <ul class="navegador">
                 <li>
-                    <a href="./pages/store.html">Store</a>
+                    <a href="./pages/store.html" class="menu">Store</a>
                 </li>
                 <li>
-                    <a href="./pages/contacto.html">Contacto</a>
+                    <a href="./pages/contacto.html" class="menu">Contacto</a>
                 </li>
                 <li>
-                    <a href="./pages/patrocinios.html">Patrocinios</a>
+                    <a href="./pages/patrocinios.html" class="menu">Patrocinios</a>
                 </li>
                 <li>
-                    <a href="./pages/quienes-somos.html">Quienes Somos</a>
+                    <a href="./pages/quienes-somos.html" class="menu">Quienes Somos</a>
                 </li>
             </ul>
         </nav>
     </header>   
-
-    <main>    
-        <section  class="carrusel"> 
-            <img src="./img/carrusel air force index.jpg" alt="imagen carrusel"  >
-        </section>
+    <main class="main">    
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="./img/jordan 1 mid 5.jpg" class="d-block w-100" alt="Jordan5">
+        </div>
+        <div class="carousel-item">
+            <img src="./img/airforce 1 tienda 3.jpg" class="d-block w-100" alt="airforce1-5">
+        </div>
+        <div class="carousel-item">
+            <img src="./img/dunk low retro 3.jpg" class="d-block w-100" alt="dunklow 6">
+        </div>
+        </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+            </button>
+    </div>
         <section>
             <article class="subtitulos"> 
                 <h2>!!Un adelanto de lo que encontraras en nuestra pagina!!<h2>
             </article>
         </section>
-        <p>Somos una pagina destina aquellos que son apasionados por las mejores snekers de Argentina, No esperes mas esto es lo mejor de nuestro pais</p>
+        <p>Somos una pagina destinada aquellos que son apasionados por las mejores sneckers de Argentina, No esperes mas esto es lo mejor de nuestro pais</p>
 
     </main>
 
-    <footer>
+    <footer class="footer">
         <h2 class="derechos">Derechos Reservados</h2>
         <section class="redes">
             <img src="./img/instagram.png" alt="Instagram" class="rrss">
@@ -52,5 +70,6 @@
             <img src=".//img/whatsapp.png" alt="whatsapp" class="rrss">
         </section>
     </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
