--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0 - Contacto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-    <header> 
+    <header class="header"> 
         <a href="../index.html">
             <img src="../img/1ebc7aceddbbc6be34f0b3de2f920ce0.jpg" alt="logo" class="logos">
         </a>
@@ -15,41 +16,43 @@
         <nav>
             <ul class="navegador">
                 <li>
-                    <a href="./store.html">Store</a>
+                    <a href="./store.html" class="menu">Store</a>
                 </li>
                 <li>
-                    <a href="./contacto.html">Contacto</a>
+                    <a href="./contacto.html" class="menu">Contacto</a>
                 </li>
                 <li>
-                    <a href="./patrocinios.html">Patrocinios</a>
+                    <a href="./patrocinios.html" class="menu">Patrocinios</a>
                 </li>
                 <li>
-                    <a href="./quienes-somos.html">Quienes Somos</a>
+                    <a href="./quienes-somos.html" class="menu">Quienes Somos</a>
                 </li>
             </ul>
         </nav>
     </header>
-<main>
+    <main class="main">
     <h2 class="subtitulos">Contacto</h2>
-
-    <form>
-        <span>Nombre:</span> 
-            <input type="text">
-    </form>
-    <form>    
-        <label>Telefono:</label>
+        <form>
+            <span>Nombre:</span> 
+                <input type="text">
+        </form>
+        <form>      
+            <label>Telefono:</label>
             <input type="tel">
-    </form>
-        <label>Email:</label>
+        </form>
+        <form>
+            <label>Email:</label>
             <input type="email">
-    <form>
-        <label>Contraseña:</label>
+        </form>
+        <form>
+            <label>Contraseña:</label>
             <input type="password">
-    </form>
+            <button type="submit">Enviar</button>
+        </form>
+        
+    </main>
 
-</main>
-
-<footer>   
+<footer class="footer">   
     <h2 class="derechos">Derechos Reservados </h2>
     <section class="redes">
         <img src="../img/instagram.png" alt="Instagram" class="rrss">
@@ -59,5 +62,6 @@
     </section>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
