--- a/pages/patrocinios.html
+++ b/pages/patrocinios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0 - Patrocinios</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
@@ -14,16 +15,16 @@
         <h1>StoreNike2.0</h1>
             <ul class="navegador">
                 <li>
-                    <a href="./store.html">Store</a>
+                    <a href="./store.html" class="menu">Store</a>
                 </li>
                 <li>
-                    <a href="./contacto.html">Contacto</a>
+                    <a href="./contacto.html" class="menu">Contacto</a>
                 </li>
                 <li>
-                    <a href="./patrocinios.html">Patrocinios</a>
+                    <a href="./patrocinios.html" class="menu">Patrocinios</a>
                 </li>
                 <li>
-                    <a href="./quienes-somos.html">Quienes Somos</a>
+                    <a href="./quienes-somos.html" class="menu">Quienes Somos</a>
                 </li>
             </ul>
         </nav>
@@ -49,6 +50,6 @@
         </section>
     </footer>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
