--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0 - Quienes somos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-    <header> 
+    <header class="header"> 
         <a href="../index.html">
             <img src="../img/1ebc7aceddbbc6be34f0b3de2f920ce0.jpg" alt="logo" class="logos">
         </a>
@@ -15,21 +16,21 @@
         <nav>
             <ul class="navegador">
                 <li>
-                    <a href="./store.html">Store</a>
+                    <a href="./store.html" class="menu">Store</a>
                 </li>
                 <li>
-                    <a href="./contacto.html">Contacto</a>
+                    <a href="./contacto.html" class="menu">Contacto</a>
                 </li>
                 <li>
-                    <a href="./patrocinios.html">Patrocinios</a>
+                    <a href="./patrocinios.html" class="menu">Patrocinios</a>
                 </li>
                 <li>
-                    <a href="./quienes-somos.html">Quienes Somos</a>
+                    <a href="./quienes-somos.html" class="menu">Quienes Somos</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <h2 class="subtitulos">Quienes somos</h2>
         <p>Somos un grupo de ex jugadores profesionales de NBA con aspiraciones de mejorar el mundo de las zapatillas nike por eso creamos StoreNike2.0 </p>
         <ul>
@@ -40,7 +41,7 @@
         <img src="../img/lebron-james-y-michael-jordan_862x485.jpg" alt="creadores" class="creadores">
         </section>
     </main>
-    <footer>  
+    <footer class="footer">  
         <h2 class="derechos">Derechos Reservados</h2>
         <section class="redes">
             <img src="../img/instagram.png" alt="Instagram" class="rrss">
@@ -50,6 +51,6 @@
         </section>
     </footer>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
