--- a/pages/store.html
+++ b/pages/store.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0 - Store </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
@@ -15,24 +16,24 @@
     <nav>
         <ul class="navegador">
             <li>
-                <a href="./store.html">Store</a>
+                <a href="./store.html" class="menu">Store</a>
             </li>
             <li>
-                <a href="./contacto.html">Contacto</a>
+                <a href="./contacto.html" class="menu">Contacto</a>
             </li>
             <li>
-                <a href="./patrocinios.html">Patrocinios</a>
+                <a href="./patrocinios.html" class="menu">Patrocinios</a>
             </li>
             <li>
-                <a href="./quienes-somos.html">Quienes Somos</a>
+                <a href="./quienes-somos.html" class="menu">Quienes Somos</a>
             </li>
         </ul>
     </nav>
 </header>
 
-    <main>
+    <main class="main">
         <h2 class="subtitulos">Store</h2>
-            <section class="airforce">
+            <section class="airforce productos">
                 <article>
                     <img src="../img/airforce 1 tienda 1.jpg" alt="airforce" class="zapas2">
                     <h4 class="zapas">Air force - Redmi  </h4>
@@ -58,7 +59,7 @@
                     <h4>Air Force 1 - Soft pink </h4>
                 </article>
             </section>
-            <section class="dunklow">
+            <section class="dunklow productos">
                 <article>
                     <img src="../img/dunk low retro 1.jpg" alt="dunk" class="zapas2">
                     <h4 class="zapas"> Dunk Low retro </h4>
@@ -84,7 +85,7 @@
                     <h4 class="zapas"> Dunk Low retro </h4>
                 </article>
             </section>
-            <section class="jordanmid">
+            <section class="jordanmid productos">
                 <article>
                     <img src="../img/jordan 1 mid 1.jpg" alt="zapas jordan" class="zapas2">
                     <h4 class="zapas">Jordan Mid - Fullows </h4>
@@ -121,6 +122,7 @@
             <img src="../img/whatsapp.png" alt="whatsapp" class="rrss">
         </section>
     </footer>
-
+    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
