--- a/index.html
+++ b/index.html
@@ -6,29 +6,34 @@
     <title>StoreNike2.0</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
+    <meta name="description" content="StoreNike2.0 es una pagina dedicada a la importacion de zapatillas de los mejores sneckers del mundo solo para nuestro pais, Creadas por exbasqueboliste de elite solo para el mejor pais del mundo Argentina">
+    <meta name="keywords" content="Nike, zapatillas, Sneckers, Urbana ">
+    <meta name="author" content=" Lisandro Elgueta">
 </head>
 <body>
     <header>  
-        <a href="./index.html">
+        <a href="./index.html" >
             <img src="./img/1ebc7aceddbbc6be34f0b3de2f920ce0.jpg" alt="logo" class="logos">
         </a>
         <h1>StoreNike2.0</h1>
-        <nav>
-            <ul class="navegador">
-                <li>
-                    <a href="./pages/store.html" class="menu">Store</a>
-                </li>
-                <li>
-                    <a href="./pages/contacto.html" class="menu">Contacto</a>
-                </li>
-                <li>
-                    <a href="./pages/patrocinios.html" class="menu">Patrocinios</a>
-                </li>
-                <li>
-                    <a href="./pages/quienes-somos.html" class="menu">Quienes Somos</a>
-                </li>
-            </ul>
-        </nav>
+        <section class="barra">
+            <nav>
+                <ul class="navegador">
+                    <li>
+                        <a href="./pages/store.html" class="menu">Store</a>
+                    </li>
+                    <li>
+                        <a href="./pages/contacto.html" class="menu">Contacto</a>
+                    </li>
+                    <li>
+                        <a href="./pages/patrocinios.html" class="menu">Patrocinios</a>
+                    </li>
+                    <li>
+                        <a href="./pages/quienes-somos.html" class="menu">Quienes Somos</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </header>   
     <main class="main">    
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -52,7 +57,7 @@
         <span class="visually-hidden">Next</span>
             </button>
     </div>
-        <section>
+        <section class="h22">
             <article class="subtitulos"> 
                 <h2>!!Un adelanto de lo que encontraras en nuestra pagina!!<h2>
             </article>
@@ -62,8 +67,8 @@
     </main>
 
     <footer class="footer">
-        <h2 class="derechos">Derechos Reservados</h2>
         <section class="redes">
+            <h2 class="derechos">Derechos Reservados</h2>
             <img src="./img/instagram.png" alt="Instagram" class="rrss">
             <img src="./img/facebook.png" alt="Facebook" class="rrss"> 
             <img src="./img/gorjeo.png" alt="X" class="rrss">  
