--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,8 @@
     <title>StoreNike2.0 - Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
+    <meta name="description" content="En StoreNike2.0 podes comunicarte con nosotros por un pedido especial, poseemos atencion personalizada, a travez de nuetsro email o redes sociales,siempre tenemos en cuenta los deseos de nuestros clientes ">
+    <meta name="author" content=" Lisandro Elgueta">
 </head>
 <body>
     <header class="header"> 
@@ -49,12 +51,15 @@
             <input type="password">
             <button type="submit">Enviar</button>
         </form>
+            <br>
+            <br>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6802.4354018437125!2d-68.55564340000004!3d-31.518180199999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1748817730474!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         
     </main>
 
 <footer class="footer">   
-    <h2 class="derechos">Derechos Reservados </h2>
     <section class="redes">
+        <h2 class="derechos">Derechos Reservados </h2>
         <img src="../img/instagram.png" alt="Instagram" class="rrss">
         <img src="../img/facebook.png" alt="Facebook" class="rrss"> 
         <img src="../img/gorjeo.png" alt="X" class="rrss">  
