--- a/pages/patrocinios.html
+++ b/pages/patrocinios.html
@@ -6,6 +6,9 @@
     <title>StoreNike2.0 - Patrocinios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
+    <meta name="description" content="En StoreNike2.0 tambien contamos con patrocinios con los mejores cantantes y skaters y deportistas para mejorar el performance de nuetsro producto como uno de ellos es Stephan janoski 'Reconocido Skater mundialmente' ">
+    <meta name="keywords" content="Famosos, Patrocinios,Performance,janoski,Sneckers">
+    <meta name="author" content=" Lisandro Elgueta">
 </head>
 <body>
     <header>  
@@ -32,17 +35,19 @@
 
     <main>
         <h2 class="subtitulos">Patrocinios</h2>
-    <section class="patrocinados">
-        <img src="../img/97Lil Nas X ari max 97.jpg" alt="Lil Nas">
+    <section class="patrocinados" data-aos="zoom-in-up">
+        <img src="../img/97Lil Nas X ari max 97.jpg" alt="Lil Nas" class="patro">
         <p class="borde">Nuestra ultima novedad colaboracion con Lil Nas - Air Max 97</p>
-        <img src="../img/pastrocinio janoski nike.jpg" alt="janoski ">
+        </section>
+        <section class="patrocinados" data-aos="zoom-in-up">
+        <img src="../img/pastrocinio janoski nike.jpg" alt="janoski" class="patro">
         <p class="borde">Una de nuestras mejores patrocinios con Stefan janoski - janoski</p>
     </section>
     </main>
 
     <footer>  
-        <h2 class="derechos">Derechos Reservados</h2>
         <section class="redes">
+            <h2 class="derechos">Derechos Reservados</h2>
             <img src="../img/instagram.png" alt="Instagram" class="rrss">
             <img src="../img/facebook.png" alt="Facebook" class="rrss"> 
             <img src="../img/gorjeo.png" alt="X" class="rrss">  
