--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -6,6 +6,10 @@
     <title>StoreNike2.0 - Quienes somos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="description" content="Nosotros somos Exbasquebolista que decidimos cambiar el mudno de las zapatillas sneckers para mejor el performance de la gente apasionada por las zapatillas, Pueden contar con nosotros para lo que requiersan nuestros clientes ">
+    <meta name="keywords" content="Informacion-Personal, Michael Jordan, Lerbon James, Privacidad, StoreNike2.0">
+    <meta name="author" content=" Lisandro Elgueta">
 </head>
 <body>
     <header class="header"> 
@@ -37,13 +41,13 @@
             <li>Lebron James</li>
             <li>Michael Jordan</li>
         </ul>
-        <section class="creadores">
-        <img src="../img/lebron-james-y-michael-jordan_862x485.jpg" alt="creadores" class="creadores">
+        <section class="creadores" data-aos="flip-left">
+        <img src="../img/lebron-james-y-michael-jordan_862x485.jpg" alt="creadores" class="creadores" >
         </section>
     </main>
     <footer class="footer">  
-        <h2 class="derechos">Derechos Reservados</h2>
         <section class="redes">
+            <h2 class="derechos">Derechos Reservados</h2>
             <img src="../img/instagram.png" alt="Instagram" class="rrss">
             <img src="../img/facebook.png" alt="Facebook" class="rrss"> 
             <img src="../img/gorjeo.png" alt="X" class="rrss"> 
@@ -51,6 +55,10 @@
         </section>
     </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
