--- a/pages/store.html
+++ b/pages/store.html
@@ -6,6 +6,10 @@
     <title>StoreNike2.0 - Store </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="description" content="En nuestra Tienda de StoreNike2.0 podes encontrar las mejores zapatillas del pais, contamos con un amplio catalogo de zapatillas, tambien realizamos personalizacion de zapatillas y la mejor tienda que veras">
+    <meta name="keywords" content="Sneckers, airforce, jordanmid,dunklow,zapatillas,personalizacion">
+    <meta name="author" content=" Lisandro Elgueta">
 </head>
 <body>
 <header>  
@@ -34,79 +38,79 @@
     <main class="main">
         <h2 class="subtitulos">Store</h2>
             <section class="airforce productos">
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/airforce 1 tienda 1.jpg" alt="airforce" class="zapas2">
                     <h4 class="zapas">Air force - Redmi  </h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/airforce 1 tienda 2 lv8.jpg" alt="airforce" class="zapas2">
                     <h4 class="zapas">Air Force 1 - Green</h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/airforce 1 tienda 3.jpg" alt="airforce" class="zapas2">
                     <h4 class="zapas">Air Force 1 - Military green</h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/airforce 1 tienda 4.jpg" alt="airforce" class="zapas2">
-                    <h4>Air Force 1 - Light blue </h4>
+                    <h4 class="zapas">Air Force 1 - Light blue </h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/airforce 1 tienda 5.jpg" alt="airforce" class="zapas2">
-                    <h4>Air Force 1 - Versatile yellow </h4>
+                    <h4 class="zapas">Air Force 1 - Versatile yellow </h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/airforce 1 tienda 6.jpg" alt="airforce" class="zapas2">
-                    <h4>Air Force 1 - Soft pink </h4>
+                    <h4 class="zapas">Air Force 1 - Soft pink </h4>
                 </article>
             </section>
-            <section class="dunklow productos">
-                <article>
+            <section class=" dunklow productos">
+                <article  data-aos="fade-down">
                     <img src="../img/dunk low retro 1.jpg" alt="dunk" class="zapas2">
                     <h4 class="zapas"> Dunk Low retro </h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/dunk low retro 2 panda.jpg" alt="dunk" class="zapas2">
                     <h4 class="zapas"> Dunk Low retro </h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/dunk low retro 3.jpg" alt="dunk" class="zapas2">
                     <h4 class="zapas"> Dunk Low retro </h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/dunk low retro 4.jpg" alt="dunk" class="zapas2">
                     <h4 class="zapas"> Dunk Low retro </h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/dunk low retro 5 premium.jpg" alt="dunk" class="zapas2">
                     <h4 class="zapas"> Dunk Low retro </h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/dunk low retro 6.jpg" alt="dunk" class="zapas2">
                     <h4 class="zapas"> Dunk Low retro </h4>
                 </article>
             </section>
             <section class="jordanmid productos">
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/jordan 1 mid 1.jpg" alt="zapas jordan" class="zapas2">
                     <h4 class="zapas">Jordan Mid - Fullows </h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/jordan 1 mid 2.jpg" alt="zapas jordan" class="zapas2">
                     <h4 class="zapas">Jordan Mid - Blackgreen </h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/jordan 1 mid 3.jpg" alt="zapas jordan" class="zapas2">
                     <h4 class="zapas">Jordan Mid - Orange </h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/jordan 1 mid 4.jpg" alt="zapas jordan" class="zapas2">
                     <h4 class="zapas">Jordan Mid - White Gray</h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/jordan 1 mid 5.jpg" alt="zapas jordan" class="zapas2">
                     <h4 class="zapas">Jordan Mid - Blue White</h4>
                 </article>
-                <article>
+                <article  data-aos="fade-down">
                     <img src="../img/jordan 1 mid 6.jpg" alt="zapas jordan" class="zapas2">
                     <h4 class="zapas">Jordan Mid - Viol White </h4>
                 </article>
@@ -114,8 +118,8 @@
     </main>
 
     <footer>   
-        <h2 class="derechos">Derechos Reservados</h2>
         <section class="redes">
+            <h2 class="derechos">Derechos Reservados</h2>
             <img src="../img/instagram.png" alt="Instagram" class="rrss">
             <img src="../img/facebook.png" alt="Facebook" class="rrss"> 
             <img src="../img/gorjeo.png" alt="X" class="rrss">  
@@ -123,6 +127,10 @@
         </section>
     </footer>
     
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
