--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles/styles.css"
     <meta name="description" content="StoreNike2.0 es una pagina dedicada a la importacion de zapatillas de los mejores sneckers del mundo solo para nuestro pais, Creadas por exbasqueboliste de elite solo para el mejor pais del mundo Argentina">
     <meta name="keywords" content="Nike, zapatillas, Sneckers, Urbana ">
     <meta name="author" content=" Lisandro Elgueta">
