--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0 - Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <meta name="description" content="En StoreNike2.0 podes comunicarte con nosotros por un pedido especial, poseemos atencion personalizada, a travez de nuetsro email o redes sociales,siempre tenemos en cuenta los deseos de nuestros clientes ">
     <meta name="author" content=" Lisandro Elgueta">
 </head>
