--- a/pages/patrocinios.html
+++ b/pages/patrocinios.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0 - Patrocinios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <meta name="description" content="En StoreNike2.0 tambien contamos con patrocinios con los mejores cantantes y skaters y deportistas para mejorar el performance de nuetsro producto como uno de ellos es Stephan janoski 'Reconocido Skater mundialmente' ">
     <meta name="keywords" content="Famosos, Patrocinios,Performance,janoski,Sneckers">
     <meta name="author" content=" Lisandro Elgueta">
