--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0 - Quienes somos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="description" content="Nosotros somos Exbasquebolista que decidimos cambiar el mudno de las zapatillas sneckers para mejor el performance de la gente apasionada por las zapatillas, Pueden contar con nosotros para lo que requiersan nuestros clientes ">
     <meta name="keywords" content="Informacion-Personal, Michael Jordan, Lerbon James, Privacidad, StoreNike2.0">
