--- a/pages/store.html
+++ b/pages/store.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0 - Store </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="description" content="En nuestra Tienda de StoreNike2.0 podes encontrar las mejores zapatillas del pais, contamos con un amplio catalogo de zapatillas, tambien realizamos personalizacion de zapatillas y la mejor tienda que veras">
     <meta name="keywords" content="Sneckers, airforce, jordanmid,dunklow,zapatillas,personalizacion">
